tests/invalid/unresolved_symbol.ar
fn main() {
    const a = b;
}

//! 2:15: error: unresolved symbol `b`
